--- a/TodoList/wwwroot/css/site.css
+++ b/TodoList/wwwroot/css/site.css
@@ -1,22 +1,38 @@
-html {
-  font-size: 14px;
+a {
+    cursor: pointer;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+#editForm {
+    display: none;
+    margin-bottom: 16px;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+table {
+    border: 1px solid;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+th {
+    background-color: ghostwhite;
+    padding: 8px;
 }
 
-body {
-  margin-bottom: 60px;
+td {
+    padding: 8px;
+}
+
+button {
+    background-color: aliceblue;
+    border: 1px solid grey;
+    border-radius: 6px;
+}
+
+.table {
+    display: flex;
+    justify-content: center;
+}
+
+form {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
 }
