--- a/TodoList/wwwroot/css/site.css
+++ b/TodoList/wwwroot/css/site.css
@@ -26,13 +26,9 @@ button {
     border-radius: 6px;
 }
 
-.table {
-    display: flex;
-    justify-content: center;
-}
-
 form {
     display: flex;
     justify-content: center;
     gap: 8px;
+    align-items: center;
 }
