--- a/TodoList/Views/Home/Index.cshtml
+++ b/TodoList/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 
     <p class="lead mt-2" id="counter"></p>
 
-    <table class="table">
+    <table class="table table-light table-bordered border-secondary table-striped table-hover">
         <thead>
             <tr>
                 <th>Name</th>
